Upgrade Karaf to 4.4.8

--- a/catalog/core/catalog-core-directorymonitor/pom.xml
+++ b/catalog/core/catalog-core-directorymonitor/pom.xml
@@ -342,6 +342,7 @@
         <dependency>
             <groupId>org.ops4j.pax.tinybundles</groupId>
             <artifactId>tinybundles</artifactId>
+            <version>${tinybundles.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
