--- a/catalog/opensearch/catalog-opensearch-endpoint/pom.xml
+++ b/catalog/opensearch/catalog-opensearch-endpoint/pom.xml
@@ -24,8 +24,6 @@
     <packaging>bundle</packaging>
     <properties>
         <parboiled.version>1.4.1</parboiled.version>
-        <!-- Overriding the asm version for jdk21 compatibility -->
-        <opensearch.asm.version>9.5</opensearch.asm.version>
     </properties>
     <dependencies>
         <dependency>
@@ -61,17 +59,17 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
-            <version>${opensearch.asm.version}</version>
+            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-tree</artifactId>
-            <version>${opensearch.asm.version}</version>
+            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-analysis</artifactId>
-            <version>${opensearch.asm.version}</version>
+            <version>${asm.version}</version>
         </dependency>
         <!--test dependencies-->
         <dependency>
