--- a/libs/test-common/pom.xml
+++ b/libs/test-common/pom.xml
@@ -181,7 +181,7 @@
             <dependency>
                 <groupId>org.ops4j.base</groupId>
                 <artifactId>ops4j-base-net</artifactId>
-                <version>1.5.0</version>
+                <version>${org.ops4j.base.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
