--- a/pom.xml
+++ b/pom.xml
@@ -122,10 +122,10 @@
         <jsonassert.version>1.5.0</jsonassert.version>
         <spock.version>2.3-groovy-4.0</spock.version>
         <mockito.version>3.6.28</mockito.version>
-        <pax.exam.version>4.13.5</pax.exam.version>
-        <pax.logging.version>2.2.8</pax.logging.version>
-        <pax.url.version>2.6.16</pax.url.version>
-        <pax.web.version>8.0.30</pax.web.version>
+        <pax.exam.version>4.14.0</pax.exam.version>
+        <pax.logging.version>2.3.0</pax.logging.version>
+        <pax.url.version>2.6.17</pax.url.version>
+        <pax.web.version>8.0.33</pax.web.version>
         <restito.version>1.1.2</restito.version>
         <restassured.version>5.5.0</restassured.version>
         <groovy.version>4.0.23</groovy.version>
@@ -149,16 +149,16 @@
         <abdera.version>1.1.3</abdera.version>
         <antlr.version>4.3</antlr.version>
         <apache.shiro.version>1.13.0</apache.shiro.version>
-        <asm.version>9.6</asm.version>
+        <asm.version>9.8</asm.version>
         <awaitility.version>3.1.6</awaitility.version>
-        <bouncy.version>1.80</bouncy.version>
+        <bouncy.version>1.81</bouncy.version>
         <c3p0.version>0.9.5.5</c3p0.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
         <camel.version>3.22.4</camel.version>
         <cesium.version>1.34</cesium.version>
         <commons-compress.version>1.23.0</commons-compress.version>
-        <commons.fileupload.version>1.5</commons.fileupload.version>
+        <commons.fileupload.version>1.6.0</commons.fileupload.version>
         <commons-beanutils.version>1.11.0</commons-beanutils.version>
         <commons-codec.version>1.15</commons-codec.version>
         <commons-collections.version>3.2.2</commons-collections.version>
@@ -168,10 +168,10 @@
         <commons-csv.version>1.4</commons-csv.version>
         <commons-digester.version>1.8.1</commons-digester.version>
         <commons-exec.version>1.3</commons-exec.version>
-        <commons-io.version>2.18.0</commons-io.version>
+        <commons-io.version>2.20.0</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <commons-lang3.version>3.17.0</commons-lang3.version>
-        <commons-logging.version>1.2</commons-logging.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
+        <commons-logging.version>1.3.5</commons-logging.version>
         <commons-math3.version>3.6.1</commons-math3.version>
         <commons-net.version>3.5</commons-net.version>
         <commons-pool.version>1.6</commons-pool.version>
@@ -238,8 +238,8 @@
         <jts.spatial4j.version>1.17.1</jts.spatial4j.version>
         <jvnet-ogc.version>2.6.1</jvnet-ogc.version>
         <jwnl.version>1.3.3</jwnl.version>
-        <karaf.version>4.4.7</karaf.version>
-        <jansi.version>2.4.1</jansi.version>
+        <karaf.version>4.4.8</karaf.version>
+        <jansi.version>2.4.2</jansi.version>
         <org.osgi.util.promise.version>1.2.0</org.osgi.util.promise.version>
         <org.osgi.util.function.version>1.2.0</org.osgi.util.function.version>
         <la4j.version>0.6.0</la4j.version>
@@ -264,8 +264,9 @@
         <nimbus.langtag.version>1.7</nimbus.langtag.version>
         <org.geotools.version>33.1</org.geotools.version>
         <geotools-hsql.version>2.7.2</geotools-hsql.version>
+        <org.ops4j.base.version>1.5.1</org.ops4j.base.version>
         <!-- Note: The swissbox version needs to match the version used by pax-exam . -->
-        <org.ops4j.pax.swissbox.version>1.8.5</org.ops4j.pax.swissbox.version>
+        <org.ops4j.pax.swissbox.version>1.9.0</org.ops4j.pax.swissbox.version>
         <org.rrd4j.version>3.3.1</org.rrd4j.version>
         <org.slf4j.version>1.7.32</org.slf4j.version>
         <osgi.compendium.version>7.0.0</osgi.compendium.version>
@@ -303,10 +304,11 @@
         <solr.javax.annotation-api.version>2.1.1</solr.javax.annotation-api.version>
         <spark.version>2.9.4</spark.version>
         <spatial4j.version>0.8</spatial4j.version>
-        <spring.version>6.1.14</spring.version>
-        <spring.feature.version>6.1.14_1</spring.feature.version>
+        <spring.version>6.1.21</spring.version>
+        <spring.feature.version>6.1.21_1</spring.feature.version>
         <spring-osgi-mock.version>1.2.1</spring-osgi-mock.version>
         <tika.version>2.4.0</tika.version>
+        <tinybundles.version>4.0.1</tinybundles.version>
         <usng4j.version>0.4</usng4j.version>
         <validation.version>1.1.0.Final</validation.version>
         <woodstox.core.version>6.5.1</woodstox.core.version>
