--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,8 @@
         <xmlunit.version>1.4</xmlunit.version>
         <xmlunit-matchers.version>2.8.2</xmlunit-matchers.version>
         <auth0.jwt.version>3.8.1</auth0.jwt.version>
+        <tinybundles.version>4.0.1</tinybundles.version>
+        <tinybundles.bnd.version>6.4.1</tinybundles.bnd.version>
 
         <!--Project properties-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -308,7 +310,6 @@
         <spring.feature.version>6.1.21_1</spring.feature.version>
         <spring-osgi-mock.version>1.2.1</spring-osgi-mock.version>
         <tika.version>2.4.0</tika.version>
-        <tinybundles.version>4.0.1</tinybundles.version>
         <usng4j.version>0.4</usng4j.version>
         <validation.version>1.1.0.Final</validation.version>
         <woodstox.core.version>6.5.1</woodstox.core.version>
